X,Y Direction wrong after bpy.ops.view3d.viewnumpad #36278

Closed
opened 2013-07-25 09:27:45 +02:00 by Danyang Yi · 3 comments

%%%--- Operating System, Graphics card ---
win7 64 sp1
AMD Radeon HD 7700s

- Blender version with error, and version that worked ---

blender 2.86.1
r58588

- Short description of error ---

When we talk about Top-view( numpad 7).Y is up. X is right(in our view);
But view3d.viewnumpad(shift +numpad 7) don't use System direction. Maybe they should be coordinated.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Check snapshot in attachments. Please!

Thanks for you great work!!! %%%

%%%--- Operating System, Graphics card --- win7 64 sp1 AMD Radeon HD 7700s - Blender version with error, and version that worked --- blender 2.86.1 r58588 - Short description of error --- When we talk about Top-view( numpad 7).Y is up. X is right(in our view); But view3d.viewnumpad(shift +numpad 7) don't use System direction. Maybe they should be coordinated. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Check snapshot in attachments. Please! Thanks for you great work!!! %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r58596.%%%

%%%fixed r58596.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36278
No description provided.