fix [#36278] X,Y Direction wrong after bpy.ops.view3d.viewnumpad

the cause of the problem was the orientation from the active object was inconstant.
copying the obmat directly gave a different result then getting the normal,tangent from getTransformOrientation and passing to createSpaceNormalTangent.